--- a/vite-project/src/index.scss
+++ b/vite-project/src/index.scss
@@ -12,6 +12,33 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* Footer.scss */
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer__content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.footer__logo img {
+  max-width: 100px; /* Ajusta el tamaño máximo de tu logo según sea necesario */
+}
+
+.footer__copyright {
+  flex: 1; /* Ocupa el espacio restante */
+}
+
+.footer__extra {
+  flex: 1; /* Ocupa el espacio restante */
+}
+
 
 a {
   font-weight: 500;
@@ -66,3 +93,27 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+/* index.scss */
+.product-card {
+  width: calc(25% - 20px);
+  margin: 10px;
+  display: inline-block;
+  background-color: #f0f0f0;
+  padding: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  border-radius: 8px;
+}
+
+.product-card img {
+  max-width: 100%;
+  max-height: 200px;
+  border-radius: 8px;
+  object-fit: cover;
+}
+
+.product-card .btn {
+  margin-top: 10px;
+}
+
+
